--- a/ch15/web-architecture-3.html
+++ b/ch15/web-architecture-3.html
@@ -233,6 +233,9 @@ code.language-yaml {
 <p>&#x539F;&#x5219;4&#xFF1A;&#x82B1;&#x54E8;&#x7684;&#x7B97;&#x6CD5;&#x6BD4;&#x7B80;&#x5355;&#x7B97;&#x6CD5;&#x66F4;&#x5BB9;&#x6613;&#x51FA; bug &#x3001;&#x66F4;&#x96BE;&#x5B9E;&#x73B0;&#x3002;&#x5C3D;&#x91CF;&#x4F7F;&#x7528;&#x7B80;&#x5355;&#x7684;&#x7B97;&#x6CD5;&#x914D;&#x5408;&#x7B80;&#x5355;&#x7684;&#x6570;&#x636E;&#x7ED3;&#x6784;&#x3002;</p>
 <p>&#x539F;&#x5219;5&#xFF1A; &#x4EE5;&#x6570;&#x636E;&#x4E3A;&#x4E2D;&#x5FC3;&#x3002;&#x5982;&#x679C;&#x5DF2;&#x7ECF;&#x9009;&#x62E9;&#x4E86;&#x6B63;&#x786E;&#x7684;&#x6570;&#x636E;&#x7ED3;&#x6784;&#x5E76;&#x4E14;&#x628A;&#x4E00;&#x5207;&#x90FD;&#x7EC4;&#x7EC7;&#x5F97;&#x4E95;&#x4E95;&#x6709;&#x6761;&#xFF0C;&#x6B63;&#x786E;&#x7684;&#x7B97;&#x6CD5;&#x4E5F;&#x5C31;&#x4E0D;&#x8A00;&#x81EA;&#x660E;&#x3002;&#x7F16;&#x7A0B;&#x7684;&#x6838;&#x5FC3;&#x662F;&#x6570;&#x636E;&#x7ED3;&#x6784;&#xFF0C;&#x800C;&#x4E0D;&#x662F;&#x7B97;&#x6CD5;&#x3002;</p>
 <p>&#x539F;&#x5219;6&#xFF1A;&#x6CA1;&#x6709;&#x539F;&#x5219;6&#x3002;</p>
+<h4 class="mume-header" id="%E6%80%BB%E7%BB%93">&#x603B;&#x7ED3;</h4>
+
+<p>&#x8981;&#x9010;&#x4E2A;&#x8BB2;&#x89E3;&#xFF0C;&#x4E00;&#x8282;&#x8BFE;&#x65F6;&#x95F4;&#x5B8C;&#x5168;&#x4E0D;&#x591F;&#xFF0C;&#x8FD9;&#x4E9B;&#x539F;&#x5219;&#x5DF2;&#x7ECF;&#x5F88;&#x6E05;&#x6670;&#x4E86;&#x3002;&#x4F60;&#x53EF;&#x4EE5;&#x5728;&#x5B9E;&#x8DF5;&#x4E2D;&#x628A;&#x5B83;&#x4EEC;&#x4F5C;&#x4E3A;&#x6307;&#x5BFC;&#x601D;&#x60F3;&#x3002;&#x5176;&#x4ED6;&#x7CFB;&#x7EDF;&#x7684;&#x8BBE;&#x8BA1;&#x54F2;&#x5B66;&#x4E5F;&#x5177;&#x6709;&#x53EF;&#x53D6;&#x4E4B;&#x5904;&#xFF0C;&#x4E8B;&#x5B9E;&#x4E0A;&#xFF0C;&#x5927;&#x5BB6;&#x90FD;&#x514D;&#x4E0D;&#x4E86;&#x76F8;&#x4E92;&#x501F;&#x9274;&#x597D;&#x7684;&#x8BBE;&#x8BA1;&#x601D;&#x60F3;&#x3002;</p>
 
       </div>
       
